Fix button on mobile

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -291,7 +291,7 @@ input, textarea {
 	border-radius: 4px;
 	font-family: $light;
 	padding: 0.75em 0.5em 0.75em 0.5em;
-	margin: 0.5em 0 1.75em 0;
+	margin: 0.5em 0 1.5em 0;
 	font-size: 1em;
 }
 
@@ -301,6 +301,9 @@ textarea {
 }
 
 #submit {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 	border: 2px solid $color;
 	width: 25%;
 	background-color: transparent;
