--- a/sass/main.css
+++ b/sass/main.css
@@ -339,7 +339,7 @@ input, textarea {
   border-radius: 4px;
   font-family: Inter-Light-BETA;
   padding: 0.75em 0.5em 0.75em 0.5em;
-  margin: 0.5em 0 1.75em 0;
+  margin: 0.5em 0 1.5em 0;
   font-size: 1em;
 }
 
@@ -349,6 +349,9 @@ textarea {
 }
 
 #submit {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   border: 2px solid #80DEEA;
   width: 25%;
   background-color: transparent;
